# Gomoku

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: release.yml
scripts/: bootstrap.ps1  bootstrap.sh  run.ps1  run.sh  setup.ps1  setup.sh
src/: game.cpp  game.h  gomoku.cpp  gomoku.h  gomoku_ai.cpp  gomoku_ai.h  main_raylib.cpp  main_sdl2.cpp  main_x11.cpp  win32_main.cpp
