cmake_minimum_required(VERSION 3.16)
project(Gomoku LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(USE_SDL2 "Build with SDL2 instead of raylib" OFF)

set(GOMOKU_SOURCES
    src/game.cpp
)

if (USE_SDL2)
    find_package(SDL2 CONFIG REQUIRED)
    add_executable(gomoku ${GOMOKU_SOURCES} src/main_sdl2.cpp)
    target_link_libraries(gomoku PRIVATE SDL2::SDL2 SDL2::SDL2main)
    target_compile_definitions(gomoku PRIVATE USE_SDL2)
else()
    find_package(raylib QUIET)
    if (raylib_FOUND)
        add_executable(gomoku ${GOMOKU_SOURCES} src/main_raylib.cpp)
        target_link_libraries(gomoku PRIVATE raylib)
    else()
        find_package(SDL2 CONFIG QUIET)
        if (SDL2_FOUND)
            add_executable(gomoku ${GOMOKU_SOURCES} src/main_sdl2.cpp)
            target_link_libraries(gomoku PRIVATE SDL2::SDL2 SDL2::SDL2main)
            target_compile_definitions(gomoku PRIVATE USE_SDL2)
        else()
            find_package(X11 REQUIRED)
            add_executable(gomoku ${GOMOKU_SOURCES} src/main_x11.cpp)
            target_link_libraries(gomoku PRIVATE X11::X11)
            target_compile_definitions(gomoku PRIVATE USE_X11_FALLBACK)
        endif()
    endif()
endif()

if (APPLE)
    target_link_libraries(gomoku PRIVATE "-framework IOKit" "-framework Cocoa" "-framework OpenGL")
endif()
